k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-app
  labels:
    app: auth-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-app
  template:
    metadata:
      labels:
        app: auth-app
    spec:
      containers:
      - name: auth-api
        image: 387050840675.dkr.ecr.us-east-1.amazonaws.com/auth-app:b3b1d19
        imagePullPolicy: Always
        ports:
        - containerPort: 3004
        readinessProbe:
          httpGet:
            path: api/v1/auth/health
            port: 3004
        livenessProbe:
          httpGet:
            path: api/v1/auth/health
            port: 3004
          initialDelaySeconds: 5 
          periodSeconds: 30
          failureThreshold: 3
