k8s/busquedas-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busquedas-app
  labels:
    app: busquedas-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busquedas-app
  template:
    metadata:
      labels:
        app: busquedas-app
    spec:
      containers:
      - name: busquedas-api
        image: 387050840675.dkr.ecr.us-east-1.amazonaws.com/busquedas-app:v20.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3002
        readinessProbe:
          httpGet:
            path: api/v1/busquedas/health
            port: 3002
        livenessProbe:
          httpGet:
            path: api/v1/busquedas/health
            port: 3002
          initialDelaySeconds: 5 
          periodSeconds: 30
          failureThreshold: 3
