k8s/clientes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clientes-app
  labels:
    app: clientes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clientes-app
  template:
    metadata:
      labels:
        app: clientes-app
    spec:
      containers:
      - name: clientes-api
        image: 387050840675.dkr.ecr.us-east-1.amazonaws.com/clientes-app:b3b1d19
        imagePullPolicy: Always
        ports:
        - containerPort: 3006
        readinessProbe:
          httpGet:
            path: api/v1/Travelers/health
            port: 3006
        livenessProbe:
          httpGet:
            path: api/v1/Travelers/health
            port: 3006
          initialDelaySeconds: 5 
          periodSeconds: 30
          failureThreshold: 3
