k8s/comentarios-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comentarios-app
  labels:
    app: comentarios-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comentarios-app
  template:
    metadata:
      labels:
        app: comentarios-app
    spec:
      containers:
      - name: comentarios-api
        image: 387050840675.dkr.ecr.us-east-1.amazonaws.com/comentarios-app:v20.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3003
        readinessProbe:
          httpGet:
            path: api/v1/reviews/health
            port: 3003
        livenessProbe:
          httpGet:
            path: api/v1/reviews/health
            port: 3003
          initialDelaySeconds: 5 
          periodSeconds: 30
          failureThreshold: 3
