k8s/inventario-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventarios-app
  labels:
    app: inventarios-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventarios-app
  template:
    metadata:
      labels:
        app: inventarios-app
    spec:
      containers:
      - name: inventarios-api
        image: 387050840675.dkr.ecr.us-east-1.amazonaws.com/inventarios-app:v25.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: api/v1/inventarios/health
            port: 3000
        livenessProbe:
          httpGet:
            path: api/v1/inventarios/health
            port: 3000
          initialDelaySeconds: 5 
          periodSeconds: 30
          failureThreshold: 3
