k8s/proveedores-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proveedores-app
  labels:
    app: proveedores-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proveedores-app
  template:
    metadata:
      labels:
        app: proveedores-app
    spec:
      containers:
      - name: proveedores-api
        image: 387050840675.dkr.ecr.us-east-1.amazonaws.com/proveedores-app:b3b1d19
        imagePullPolicy: Always
        ports:
        - containerPort: 3007
        readinessProbe:
          httpGet:
            path: api/v1/Managers/health
            port: 3007
        livenessProbe:
          httpGet:
            path: api/v1/Managers/health
            port: 3007
          initialDelaySeconds: 5 
          periodSeconds: 30
          failureThreshold: 3
