k8s/reservas-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservas-app
  labels:
    app: reservas-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservas-app
  template:
    metadata:
      labels:
        app: reservas-app
    spec:
      containers:
      - name: reservas-api
        image: 387050840675.dkr.ecr.us-east-1.amazonaws.com/reservas-app:v4.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
        readinessProbe:
          httpGet:
            path: api/v1/reservas/health
            port: 3001
        livenessProbe:
          httpGet:
            path: api/v1/reservas/health
            port: 3001
          initialDelaySeconds: 5 
          periodSeconds: 30
          failureThreshold: 3
