k8s/transacciones-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transacciones-app
  labels:
    app: transacciones-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transacciones-app
  template:
    metadata:
      labels:
        app: transacciones-app
    spec:
      containers:
      - name: transacciones-api
        image: 387050840675.dkr.ecr.us-east-1.amazonaws.com/transacciones-app:v20.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3005
        readinessProbe:
          httpGet:
            path: api/v1/Transactions/health
            port: 3005
        livenessProbe:
          httpGet:
            path: api/v1/Transactions/health
            port: 3005
          initialDelaySeconds: 5 
          periodSeconds: 30
          failureThreshold: 3
