k8s/transacciones-worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pagos-worker-app
  labels:
    app: pagos-worker-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pagos-worker-app
  template:
    metadata:
      labels:
        app: pagos-worker-app
    spec:
      containers:
        - name: worker
          image: 387050840675.dkr.ecr.us-east-1.amazonaws.com/transacciones-app:v20.0.0
          imagePullPolicy: Always

          command: ["python", "worker_main.py"]
