k8s/auth-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-app-service
  labels:
    app: auth-app
spec:
  type: NodePort
  selector:
    app: auth-app
  ports:
    - protocol: TCP
      port: 80          # Service port
      targetPort: 3004  # Container port
      nodePort: 30004   # External port (30000-32767)
