k8s/busquedas-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: busquedas-app-service
  labels:
    app: busquedas-app
spec:
  type: NodePort
  selector:
    app: busquedas-app
  ports:
    - protocol: TCP
      port: 80          # Service port
      targetPort: 3002  # Container port
      nodePort: 30002   # External port (30000-32767)
