k8s/clientes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clientes-app-service
  labels:
    app: clientes-app
spec:
  type: NodePort
  selector:
    app: clientes-app
  ports:
    - protocol: TCP
      port: 3006         # Service port
      targetPort: 3006  # Container port
      nodePort: 30006   # External port (30000-32767)
