k8s/comentarios-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: comentarios-app-service
  labels:
    app: comentarios-app
spec:
  type: NodePort
  selector:
    app: comentarios-app
  ports:
    - protocol: TCP
      port: 80          # Service port
      targetPort: 3003  # Container port
      nodePort: 30003   # External port (30000-32767)
