k8s/inventario-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventario-app-service
  labels:
    app: inventario-app
spec:
  type: NodePort
  selector:
    app: inventario-app
  ports:
    - protocol: TCP
      port: 80          # Service port
      targetPort: 3000  # Container port
      nodePort: 30000   # External port (30000-32767)
