k8s/proveedores-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proveedores-app-service
  labels:
    app: proveedores-app
spec:
  type: NodePort
  selector:
    app: proveedores-app
  ports:
    - protocol: TCP
      port: 3007          # Service port
      targetPort: 3007  # Container port
      nodePort: 30007   # External port (30000-32767)
