k8s/reservas-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: reservas-app-service
  labels:
    app: reservas-app
spec:
  type: NodePort
  selector:
    app: reservas-app
  ports:
    - protocol: TCP
      port: 80          # Service port
      targetPort: 3001  # Container port
      nodePort: 30001   # External port (30000-32767)
