k8s/tarifas-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tarifas-app-service
  labels:
    app: tarifas-app
spec:
  type: NodePort
  selector:
    app: tarifas-app
  ports:
    - protocol: TCP
      port: 80        # Service port
      targetPort: 3008  # Container port
      nodePort: 30008  # External port (30000-32767)
