k8s/transacciones-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transacciones-app-service
  labels:
    app: transacciones-app
spec:
  type: NodePort
  selector:
    app: transacciones-app
  ports:
    - protocol: TCP
      port: 3005        # Service port
      targetPort: 3005  # Container port
      nodePort: 30005  # External port (30000-32767)
