k8s/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress-8
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/v1/reservas
            pathType: Prefix
            backend:
              service:
                name: reservas-app-service
                port:
                  number: 80
          - path: /api/v1/inventarios
            pathType: Prefix
            backend:
              service:
                name: inventarios-app-service
                port:
                  number: 80
          - path: /api/v1/busquedas
            pathType: Prefix
            backend:
              service:
                name: busquedas-app-service
                port:
                  number: 80
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: auth-app-service
                port:
                  number: 80
          - path: /api/v1/reviews
            pathType: Prefix
            backend:
              service:
                name: comentarios-app-service
                port:
                  number: 80
          - path: /api/v1/Travelers
            pathType: Prefix
            backend:
              service:
                name: clientes-app-service
                port:
                  number: 80
          - path: /api/v1/Managers
            pathType: Prefix
            backend:
              service:
                name: proveedores-app-service
                port:
                  number: 80
          - path: /api/v1/Transactions
            pathType: Prefix
            backend:
              service:
                name: transacciones-app-service
                port:
                  number: 80
          - path: /api/v1/tarifas
            pathType: Prefix
            backend:
              service:
                name: tarifas-app-service
                port:
                  number: 80
